--- a/components/sections/LogoGridSection.module.css
+++ b/components/sections/LogoGridSection.module.css
@@ -77,6 +77,11 @@
 }
 
 @media (min-width: 800px) and (max-width: 1399.98px) {
+  .section {
+    padding-top: 72px;
+    padding-bottom: 72px;
+  }
+
   .grid {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
